# address_scraper

./: .gitignore  LICENSE  Pipfile  README.md  map.py  pyproject.toml  requirements.txt
address_scraper/: address.py  address_scraper.py  fetch_address.py  generate_csv.py  initialize.py  logger_singleton.py  map.py  payload.py  scraper.py  states.py  validate_state.py
app/: app.py
tests/: __init__.py  test_address.py  test_address_scraper.py  test_fetch_address.py  test_generate_csv.py  test_initialize.py  test_validate_state.py
