[tool.poetry]
name = "address-scraper"
version = "0.1.0"
description = "This Python project scrapes US addresses from an API."
authors = ["Aaron Nicholas Gumapac <aarn.gmpc@gmail.com>", "Aeinnor Reyes <aaeinnor11@gmail.com>"]
readme = "README.md"
packages = [{include = "address_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
setuptools = "^67.7.2"
pydantic = "^1.10.7"
jellyfish = "^0.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
